提交manage